1.6.2.dev
---------

- merged PR125: tox now sets "PYTHONHASHSEED" to a random value
  and offers a "--hashseed" option to repeat a test run with a specific seed.
  You can also use --hashsheed=notset to instruct tox to leave the value
  alone.  Thanks Chris Jerdonek for all the work behind this.

- fix issue132: removing zip_safe setting (so it defaults to false)
  to allow installation of tox
  via easy_install/eggs.  Thanks Jenisys.

- fix issue126: depend on virtualenv>=1.10.1 so that we can rely
  (hopefully) on a pip version which supports --pre. (tox by default
  uses to --pre).  Note that tox also vendors an older virtualenv 
  for supporting python2.5 -- although the latter will be dropped at some point.

- fix issue130: you can now set install_command=easy_install {opts} {packages}
  and expect it to work for repeated tox runs (previously it only worked
  when always recreating).  Thanks jenisys for precise reporting. 

- fix issue129: tox now uses Popen(..., universal_newlines=True) to force 
  creation of unicode stdout/stderr streams.  fixes a problem on specific
  platform configs when creating virtualenvs with Python3.3. Thanks Jorgen Schäfer
  or investigation and solution sketch.

- fix issue128: enable full substitution in install_command,
  thanks for the PR to Ronald Evers

- rework and simplify "commands" parsing and in particular posargs
  substitutions to avoid various win32/posix related quoting issues.

- make sure that the --installpkg option trumps any usedevelop settings
  in tox.ini or

1.6.1
-----

- fix issue119: {envsitepackagesdir} is now correctly computed and has
  a better test to prevent regression.

- fix issue116: make 1.6 introduced behaviour of changing to a 
  per-env HOME directory during install activities dependent 
  on "--set-home" for now.  Should re-establish the old behaviour
  when no option is given.

- fix issue118: correctly have two tests use realpath(). Thanks Barry
  Warsaw.
